--- a/package.json
+++ b/package.json
@@ -1,124 +1,78 @@
 {
-  "name": "@wangeditor-next/wangeditor",
-  "private": true,
-  "packageManager": "yarn@4.5.3",
-  "browserslist": [
-    "defaults",
-    "not IE 11"
+  "name": "@wangeditor-next/editor",
+  "version": "5.6.31",
+  "description": "Web rich text editor, Web 富文本编辑器",
+  "keywords": [
+    "wangeditor",
+    "rich text",
+    "editor",
+    "富文本",
+    "编辑器"
   ],
+  "author": "cycleccc <29912005548@qq.com>",
+  "type": "module",
+  "homepage": "https://github.com/wangeditor-next/wangeditor-next#readme",
+  "license": "MIT",
+  "types": "dist/editor/src/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "exports": {
+    ".": {
+      "types": "./dist/editor/src/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json",
+    "./dist/css/style.css": "./dist/css/style.css"
+  },
+  "directories": {
+    "lib": "dist",
+    "test": "__tests__"
+  },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wangeditor-next/wangEditor-next.git"
+  },
   "scripts": {
-    "cz": "cz",
-    "test": "cross-env NODE_OPTIONS=--unhandled-rejections=warn vitest run --passWithNoTests --dangerouslyIgnoreUnhandledErrors",
-    "test-c": "cross-env NODE_OPTIONS=--unhandled-rejections=warn vitest run --passWithNoTests --dangerouslyIgnoreUnhandledErrors --coverage",
-    "dev": "turbo run dev",
-    "dev:sh": "sh scripts/build-base.sh dev",
-    "build": "turbo run build",
-    "publish": "yarn changeset publish",
-    "prerelease": "yarn build",
-    "format": "yarn prettier --write",
-    "lint": "eslint --cache --quiet --no-error-on-unmatched-pattern ./",
-    "lint:fix": "eslint --fix --cache --quiet --no-error-on-unmatched-pattern ./",
-    "lint:staged": "lint-staged",
-    "prettier": "prettier --ignore-path .gitignore \"packages/*/+(src|__tests__)/**/*.+(ts|tsx)\"  --cache",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "e2e:dev": "concurrently \"yarn example\" \"yarn run cypress:open\"",
-    "e2e": "concurrently \"yarn example\" \"yarn run cypress:run\"",
-    "prepare": "husky install",
-    "changeset": "changeset",
-    "example": "turbo run example --filter=@wangeditor-next/editor"
+    "test": "jest",
+    "test-c": "jest --coverage",
+    "example": "concurrently \"yarn dev-watch\" \"http-server -p 8881 -c-1\" ",
+    "dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
+    "dev-watch": "cross-env NODE_ENV=development rollup -c rollup.config.js -w",
+    "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
+    "dev-size-stats": "cross-env NODE_ENV=development:size_stats rollup -c rollup.config.js",
+    "size-stats": "cross-env NODE_ENV=production:size_stats rollup -c rollup.config.js"
   },
-  "workspaces": [
-    "shared/*",
-    "packages/*"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/helper-function-name": "^7.22.5",
-    "@babel/helper-hoist-variables": "^7.22.5",
-    "@babel/helper-split-export-declaration": "^7.22.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.24.0",
-    "@babel/preset-typescript": "^7.14.5",
-    "@babel/runtime-corejs3": "^7.14.7",
-    "@changesets/cli": "^2.27.7",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@rollup/plugin-babel": "^6.0.0",
-    "@rollup/plugin-commonjs": "^28.0.0",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-replace": "^6.0.0",
-    "@rollup/plugin-terser": "^0.4.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "@vitest/coverage-v8": "2.1.2",
-    "autoprefixer": "^10.2.5",
-    "babel-core": "^7.0.0-bridge.0",
-    "concurrently": "^9.0.0",
-    "core-js": "3",
-    "cross-env": "^7.0.2",
-    "cssnano": "^7.0.0",
-    "cypress": "^13.0.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^3.0.0",
-    "eslint-plugin-html": "^8.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-vue": "^9.27.0",
-    "http-server": "^14.0.0",
-    "husky": "^9.1.6",
-    "jest-environment-jsdom": "^29.0.0",
-    "less": "^4.0.0",
-    "lint-staged": "^15.2.10",
-    "lodash": "^4.17.21",
-    "minimist": "^1.2.8",
-    "nock": "^13.2.4",
-    "patch-package": "^8.0.0",
-    "postcss": "^8.2.15",
-    "prettier": "^3.3.3",
-    "rollup": "^4.0.0",
-    "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-generate-html-template": "^1.7.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "rollup-plugin-visualizer": "^5.5.0",
-    "tslib": "^2.3.0",
-    "turbo": "2.1.3",
-    "typescript": "5.7.2",
-    "vitest": "^2.1.2"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "prettier --write"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+  "bugs": {
+    "url": "https://github.com/wangeditor-next/wangeditor-next/issues"
   },
   "dependencies": {
-    "@babel/runtime": "^7.14.6"
+    "@uppy/core": "2.1.1",
+    "@uppy/xhr-upload": "2.0.3",
+    "@wangeditor-next/basic-modules": "1.5.32",
+    "@wangeditor-next/code-highlight": "1.3.29",
+    "@wangeditor-next/core": "1.7.32",
+    "@wangeditor-next/list-module": "1.1.38",
+    "@wangeditor-next/table-module": "1.6.42",
+    "@wangeditor-next/upload-image-module": "1.1.35",
+    "@wangeditor-next/video-module": "1.3.38",
+    "dom7": "4.0.0",
+    "is-hotkey": "0.2.0",
+    "lodash.camelcase": "4.3.0",
+    "lodash.clonedeep": "4.5.0",
+    "lodash.debounce": "4.0.8",
+    "lodash.foreach": "4.5.0",
+    "lodash.isequal": "4.5.0",
+    "lodash.throttle": "4.1.1",
+    "lodash.toarray": "4.4.0",
+    "nanoid": "5.0.0",
+    "slate": "0.72.0",
+    "snabbdom": "3.1.0"
   }
 }
